Next Release
* Add embedded MP3 player as a rich text editor media type
* Add FLV player as rich text editor media type
* Fix web folder export to convert filenames to safe ASCII characters
* Fix iPod Notes export to write UTF-8 index (non-ASCII node names)
* Fix XHTML generated for SCORM Quiz
* Fix XHTML generated for True-False question feedback
* Change license footer text so translators can ignore trailing space
* Updated DE,FR,IT,PL translations

Version 1.00 (r3219)
* Fix styles to use relative line height rather than absolute
* Fix splash progress bar to indicate 100%
* Fix iDevice deletion issues including read-only resources
* Fix display of embedded image borders
* Fix header text display in single page export and printing
* Make merging packages more robust
* Make default IMS/SCORM Metadata title description from package values
* Change export to folder to not change UTF-8 filenames
* Update About box

Version 0.99 (r3186)
* Add splash screen for when launching eXe by double-clicking .elp
* Add warning screen for trying to launch multiple copies of eXe
* Add warning for trying to run an older version of eXe with newer data
* Add Catalan Wikipedia
* Add file browser to rich text editor link popup for including files
* Fix re-enable Flash autoplay attribute
* Fix multi-select option feedback
* Fix SCORM Quiz to allow deleting individual questions
* Change text export to decode HTML entities into UTF-8 string
* Remove media plugin detection allowing authoring without media plugin
* Allow specifying VCARD type in metadata fields for SCORM export
* Allow non-ASCII characters in embedded media filenames
* Slightly reduce eXe package size by not storing multiple copies of text
* Updated German, Japanese, and Chinese translations

Version 0.98 (r3136)
* Add ability to insert MimeTeX math images in any field with TinyMCE
* Add message to RSS iDevice for when feed fails
* Add labels to items added in the iDevice editor edit display