@@ -1,11 +1,15 @@
 Next Release
 * Add embedded MP3 player as a rich text editor media type
 * Add FLV player as rich text editor media type
+* Add DIV around each iDevice on web/ims/scorm export
 * Fix web folder export to convert filenames to safe ASCII characters
 * Fix iPod Notes export to write UTF-8 index (non-ASCII node names)
 * Fix XHTML generated for SCORM Quiz
 * Fix XHTML generated for True-False question feedback
+* Fix reading of exe.conf files that have UTF-8 "byte order mark"
+* Fix insertion of non-ASCII package names in Recent Projects list
 * Change license footer text so translators can ignore trailing space
+* Remove deprecated dublincore.xml metadata file from SCORM 1.2 packages
 * Updated DE,FR,IT,PL translations
 
 Version 1.00 (r3219)
